# IoT-hub

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  threat-model.md
.dvc/: config
.github/workflows/: cd-edge.yml  cd-vps.yml  ci.yml  compile-hef.yml
docs/: dataset-management.md  hef-compilation.md  voice-pipeline-setup.md
hub/: docker-compose.bench.yml  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.edge.yml  docker-compose.prod.yml  policy.yaml  scenes.yaml
hub/backend/: Dockerfile  alembic.ini  config.py  db.py  entrypoint.sh  main.py  models.py  mqtt_subscriber.py  slug.py
hub/backend/alembic/: env.py
hub/backend/alembic/versions/: c08483cb2b64_initial_schema.py  d1a2b3c4d5e6_logical_replication_setup.py  e3f4a5b6c7d8_web_ui_tables.py  f5a6b7c8d9e0_room_slug.py  g6b7c8d9e0f1_device_aliases.py
hub/backend/routes/: agent.py  audio.py  confirm.py  cv.py  deploy.py  devices.py  digest.py  enroll.py  events.py  floorplan.py  health.py  policy.py  privacy.py  security.py  sensors.py  system.py
hub/backend/schemas/: agent.py  audio.py  confirm.py  cv.py  devices.py  events.py  floorplan.py  policy.py  sensors.py  system.py
hub/backend/services/: device_registry.py  policy_loader.py  system_metrics.py
hub/cloud/: Dockerfile  telegram_bot.py
hub/edge/: Dockerfile
hub/edge/agent/: Dockerfile.llm  i18n_uk.py  intent_classifier.py  llm_entrypoint.sh  llm_local.py  llm_reasoning.py  orchestrator.py  policy.py  prototypes.yaml  router.py  scene_engine.py  state_verifier.py  text_resolver.py  tools.py
hub/edge/agent/grammars/: __init__.py  ask_user.gbnf  creative.gbnf  light.gbnf  push.gbnf  relay.gbnf  structured_tool_call.gbnf  timer.gbnf
hub/edge/cv/: Dockerfile  detector.py  face.py  fall_rule.py  fusion.py  pipeline.py  pose.py  tracker.py
hub/edge/mlops/: deploy.py  shadow_runner.py
hub/edge/storage/: t0.py
hub/edge/sync/: connectivity.py  ntfy_local.py
hub/edge/voice/: Dockerfile  audio_io.py  hailo_whisper.py  moonshine_stt.py  pipeline.py  scheduler.py  tts.py  vad.py  wake_word.py  whisper_assets.py  whisper_preprocess.py
hub/edge/zigbee/: Dockerfile  bridge.py
hub/esp32/: README.md  secrets.yaml.example  sensor-node.yaml
hub/grafana/provisioning/dashboards/: provider.yml  shadow_vs_active.json  system-overview.json
hub/grafana/provisioning/datasources/: prometheus.yml
hub/mediamtx/: mediamtx.yml
hub/mlflow/: Dockerfile
hub/mosquitto/: Dockerfile  acl.conf  docker-entrypoint.sh  mosquitto-cloud.conf  mosquitto.conf
hub/mosquitto/conf.d/: bridge.conf  bridge.conf.example
hub/prometheus/: prometheus.yml
hub/prometheus/alerts/: model_deploy.yml
hub/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  take_shots.js  vite.config.ts
hub/web/src/: App.tsx  index.css  main.tsx  sw-custom.ts  types.ts
hub/web/src/app/: router.tsx
hub/web/src/app/layout/: BottomNav.tsx  ConfirmBadge.tsx  ConfirmBell.tsx  OfflineBanner.tsx  Shell.tsx  Sidebar.tsx  TopBar.tsx
hub/web/src/app/providers/: AuthProvider.tsx  I18nProvider.tsx  QueryProvider.tsx  ThemeProvider.tsx
hub/web/src/components/: AlertCard.tsx  Button.tsx  Dialog.tsx  EmptyState.tsx  RangeSlider.tsx  Spinner.tsx  UPlotChart.tsx
hub/web/src/hooks/: useOnlineStatus.ts  useWebSocket.ts
hub/web/src/lib/: api.ts  deviceIcons.tsx  format.ts  tier.ts  types.ts
hub/web/src/pages/: Devices.tsx  EventsFeed.tsx  Settings.tsx
hub/web/src/styles/: tokens.css
hub/zigbee2mqtt/: .gitignore  configuration.yaml
mock_sensors/: base.py  config.py  run_all.py  setup_certs.sh
mock_sensors/sensors/: air_quality.py  camera.py  door.py  light.py  motion.py  power.py  temperature.py  thermostat.py
models/intent_classifier/: .gitignore  classifier_head_labels.json  config.json
models/onnx/: fire_smoke_v1.0.onnx.dvc  fire_smoke_v1.2.onnx.dvc  fire_smoke_v1.3.onnx.dvc  fire_smoke_v1.4.onnx.dvc  fire_smoke_v1.5.onnx.dvc
reports/: .gitignore
scripts/: bench_compare.py  check_datasets.py  deploy-model.sh  diag_presence.sh  edge-bootstrap-README.md  edge-bootstrap.sh  edge-updater.sh  gen-mqtt-certs.sh  gen-web-cert.sh  install-updater.sh  iot-hub-cv.service  iot-hub-voice.service  llm_bench_all.sh  model-puller.service  model-puller.sh  model-puller.timer  record-wake-word.py  run_bench_phase0.sh  setup-vps-replication.sh  test-stt.sh  wifi_stream_sender.sh
tests/integration/: test_models.py  test_mqtt_flow.py  test_voice_to_mqtt.py
tests/mocks/: sensor_node_mock.py
tests/unit/: test_connectivity.py  test_deploy.py  test_device_registry.py  test_evaluation.py  test_face.py  test_fall_rule.py  test_fusion.py  test_grammars.py  test_hailo_whisper.py  test_health.py  test_identity_hysteresis.py  test_intent_classifier.py  test_intent_classifier_dataset.py  test_llm_local.py  test_llm_reasoning.py  test_mining.py  test_moonshine_uk.py  test_mqtt_subscriber.py  test_ntfy.py  test_orchestrator.py  test_policy.py  test_router.py  test_scene_engine.py  test_sensors_route.py  test_state_verifier.py  test_system_metrics.py  test_t0_storage.py  test_telegram_bot.py  test_text_resolver.py  test_tools.py  test_tracker.py  test_train.py  test_train_yolo26.py  test_zigbee_bridge.py
training/: convert_to_hef.py  export_moonshine_onnx.py  mining.py
training/evaluation/: __init__.py  agent_accuracy.py  cv_detector_compare.py  cv_fall.py  cv_fire_smoke.py  cv_latency.py  npu_contention.py  report.py  stt_latency.py  stt_moonshine_latency.py  stt_wer.py  tts_latency.py  voice_e2e_latency.py  wer.py
training/evaluation/stt_corpus/: .gitignore  README.md  __init__.py  commands_uk.txt  record.py
training/evaluation/tts_corpus/: phrases.txt
training/fire_smoke/: train.py
training/intent_classifier/: __init__.py  convert_to_onnx.py  eval.py  intents.py  manual_test.jsonl  prepare_dataset.py  templates.py  train.py
training/llm_eval/: queries.yaml  tool_accuracy_bench.py  tools.yaml
training/person_reid/: enroll.py
training/wake_word/: train_oww.py
(+58 files in other folders)
