[project]
name = "iot-hub"
version = "0.1.0"
description = "Local-first privacy-preserving IoT hub with CV, Voice and LLM agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "pydantic>=2.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "redis[hiredis]>=5.0.0",
    "aiomqtt>=2.3.0",
    "prometheus-client>=0.20.0",
    "jsonschema>=4.22.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "python-telegram-bot>=22.0",
]

[project.optional-dependencies]
training = [
    "ultralytics>=8.4.0",
    "mlflow>=3.0.0",
    "opencv-python>=4.10.0",
]
voice = [
    "faster-whisper>=1.0.3",
    "openwakeword>=0.6.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "torch>=2.0.0",
    "numpy>=1.26.0",
]
dev = [
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    # integration test deps
    "pytest-docker>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "dvc[gdrive]>=3.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hub"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["hub", "training", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line length handled by black

[tool.ruff.lint.isort]
known-first-party = ["hub"]

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "tests/",
    "training/fire_smoke/",
    "training/person_reid/",
    "training/wake_word/",
    "training/mining\\.py",
    "training/convert_to_hef\\.py",
]

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["telegram.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiomqtt.*", "redis.*", "hiredis"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hailo_platform.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["faster_whisper.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["soundfile.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cv2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["prometheus_client.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["optimum.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hub.edge.agent.router"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["yaml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bytetracker.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mlflow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openwakeword.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sounddevice.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "hub.edge.cv.tracker",
    "hub.edge.cv.pose",
    "hub.edge.cv.face",
    "hub.edge.voice.vad",
    "hub.edge.voice.wake_word",
]
warn_unused_ignores = false

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "integration: tests that exercise multi-module flows (may use mocks for I/O)",
    "chaos: failure-injection tests for offline-first scenarios",
]
